css changes to fix spacing issues

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/guide-tour-modal/guide-tour-modal.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/guide-tour-modal/guide-tour-modal.scss
@@ -72,13 +72,13 @@
   }
   @media screen and (max-width: 767px) {
     .row {
-      margin-left: -16px;
-      margin-right: -16px;
+      margin-left: -16px !important;
+      margin-right: -16px !important;
     }
     .container,
     .col-xs-12 {
-      padding-left: 16px;
-      padding-right: 16px;
+      padding-left: 16px !important;
+      padding-right: 16px !important;
     }
   }
 
